--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -8,19 +8,13 @@ block content
     .row
         .col-12.col-md-8 
             .error= message
-
-            each location in locations
-                .card 
-                    .card-block 
-                        h4 
-                            a(href=`/location/${location._id}`)= location.name
-                            +outputRating(location.rating)
-                            span.badge.badge-pill.badge-default.float-right= location.distance
-                        p.address= location.address
-                        .facilities
-                            each facility in location.facilities
-                                span.badge.bg-warning= facility
+            app-home-list
 
         .col-12.col-md-4 
             p.lead= sidebar
             p 2021810051 이민준
+
+    block scripts
+        script(src='/build/runtime.e4985b6c090739db.js')
+        script(src='/build/polyfills.7809da1470408aee.js')
+        script(src='/build/main.6affdf316b9ecc8b.js')
